# ffmpeg_player

./: .gitignore  .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  camera.cpp  camera.h  fdecode.cpp  fdecode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerpanel.cpp  playerpanel.h  playerpanel.ui  playwidget.cpp  playwidget.h  webviewtask.cpp  webviewtask.h  widget.cpp  widget.h  xwcplayer.pro  yuv_render.cpp  yuv_render.h
player/: ._decoder.cpp  ._error.cpp  ._log.cpp  ._log.h  FrameInfo.h  ac_buf.cpp  ac_buf.h  decoder.cpp  decoder.h  error.cpp  error.h  log.cpp  log.h  p2preader.cpp  p2preader.h  render.h  resample_audio.cpp  resample_audio.h
player/Include/tutk/: AVAPIs.h  IOTCAPIs.h  IOTCWakeUp.h  P2PTunnelAPIs.h  RDTAPIs.h
player/extension/ability/: ability.c  ability.h
player/extension/dasa/: dasa.c  dasa.h
player/extension/demoOption/: demoOption.c  demoOption.h
player/extension/emulator/: emulator.c  emulator.h
player/extension/playback/: playback.c  playback.h
player/extension/speaker/: speaker.c  speaker.h
player/extension/token/: CMakeLists.txt  test_token.cpp  token.c  token.h  token.txt
player/util/: ac_queue.h  ac_time.h
tutk/: ._AVAPIs.lib  ._AVAPIsT.lib  ._IOTCAPIs.lib  ._IOTCAPIsT.lib  ._P2PTunnelAPIs.lib  ._P2PTunnelAPIsT.lib  ._RDTAPIs.lib  ._RDTAPIsT.lib  ._json-c.lib  ._libcrypto.lib  ._libcurl.lib  ._libssl.lib  AVAPIs.lib  AVAPIsT.lib  IOTCAPIs.lib  IOTCAPIsT.lib  P2PTunnelAPIs.lib  P2PTunnelAPIsT.lib  RDTAPIs.lib  RDTAPIsT.lib  json-c.lib  libcrypto.lib  libcurl.lib  libssl.lib
(+14 files in other folders)
